# crabdash

./: .gitignore  .rules  Cargo.toml  README.md  TODO.md
.github/workflows/: bundle-osx.yaml  bundle-release-osx.yaml
.zed/: tasks.json
assets/icons/: icon.icns
assets/macos/: info-extra.plist
crates/app/: Cargo.toml  build.rs
crates/app/src/: about.rs  app.rs  docker_run.rs  lib.rs
crates/app/src/components/: common.rs  content.rs  context_menu.rs  mod.rs  modal.rs  right_click_menu.rs  scroll_list.rs  sidebar.rs  text_field.rs  toast.rs
crates/app/src/components/content/: disks.rs  docker.rs  services.rs
crates/app/src/content/: disks.rs  docker.rs  docker_logs.rs  docker_run_modal.rs  header.rs  mod.rs  services.rs  shared.rs  title_bar.rs
crates/crabdash/: Cargo.toml
crates/crabdash/src/: main.rs
crates/machines/: Cargo.toml
crates/machines/src/: commands.rs  lib.rs  machine.rs  remote_connection.rs  store.rs
crates/services/: Cargo.toml
crates/services/src/: disks.rs  docker.rs  lib.rs  services.rs
crates/utils/: Cargo.toml
crates/utils/src/: args.rs  container.rs  disks.rs  lib.rs  output.rs  service_item.rs
src/: commands.rs  main.rs  models.rs
src/helpers/: commands.rs  mod.rs  remote_connection.rs
src/models/: machine.rs  mod.rs  services.rs
src/ui/: app.rs
src/ui/components/: common.rs  content.rs  modal.rs  sidebar.rs  text_field.rs
