[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/crabdash",
    "crates/machines",
    "crates/services",
]
default-members = ["crates/crabdash"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Thomas Jensen"]
description = "Crabdash desktop app built with Rust and GPUI"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
