[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/crabdash",
    "crates/machines",
    "crates/services",
]
default-members = ["crates/crabdash"]

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "MIT"
authors = ["Thomas Jensen"]
description = "Crabdash desktop app built with Rust and GPUI"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
