[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["std", "backtrace"] }
capitalize = "0.3.4"
gpui = { version = "*" }
lucide-icons = "0.575.0"
machines = { path = "../machines" }
services = { path = "../services" }
unicode-segmentation = "1.12.0"

[lints]
workspace = true
