[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow = { version = "1.0.102", features = ["std", "backtrace"] }
capitalize = "0.3.4"
gpui = { version = "*" }
libghostty-vt = "0.1.1"
lucide-icons = "0.575.0"
machines = { path = "../machines" }
services = { path = "../services" }
unicode-segmentation = "1.12.0"
uuid = "1.18.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3.2", features = ["NSDictionary", "NSString"] }

[lints]
workspace = true
