[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
tracing.workspace = true
libghostty-vt.workspace = true
lucide-icons.workspace = true
machines.workspace = true
services.workspace = true
smol.workspace = true
utils.workspace = true
uuid.workspace = true

capitalize = "0.3.4"
unicode-segmentation = "1.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3.2", features = ["NSDictionary", "NSString"] }

[lints]
workspace = true
