[package]
name = "crabdash"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app = { path = "../app" }
gpui = { version = "*" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }

[lints]
workspace = true
