[package]
name = "crabdash"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app = { path = "../app" }
gpui = { version = "*" }

[package.metadata.bundle]
name = "Crabdash"
identifier = "com.thojensen.crabdash"
icon = ["assets/icons/icon.icns"]

[lints]
workspace = true
