[package]
name = "crabdash"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app = { path = "../app" }
gpui = { version = "*" }

[package.metadata.bundle]
name = "Crabdash"
identifier = "com.thojensen.crabdash"
icon = ["assets/icons/AppIcon.icns"]
short_description = "Native desktop dashboard for machines and services"
category = "public.app-category.developer-tools"
osx_info_plist_exts = ["assets/macos/info-extra.plist"]

[lints]
workspace = true
