[package]
name = "machines"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["std", "backtrace"] }
dirs = "6.0.0"
indoc = "2.0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
services = { path = "../services" }
ssh2 = "0.9.5"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
