[package]
name = "machines"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
indoc.workspace = true
serde.workspace = true
services.workspace = true
smol.workspace = true
utils.workspace = true
uuid.workspace = true

async-ssh2-lite = { version = "0.5.0", features = ["tokio"] }
dirs = "6.0.0"
serde_json = "1.0.149"
tokio = { version = "=1.44.2", features = ["rt-multi-thread", "net", "macros"] }

[lints]
workspace = true
