[package]
name = "services"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["std", "backtrace"] }
plist = "1.8.0"
lucide-icons = "0.575.0"
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
